# study-tracker

./: Cargo.toml  README.md
src/: 123.rs  calendar.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
