[package]
name = "study_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Графический интерфейс
eframe = { version = "0.27", features = ["persistence"] }
egui = "0.27"

# Работа с датами
chrono = { version = "0.4", features = ["serde"] }

# Сохранение и загрузка данных (JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"